Add CoreML Judge Swift Bridge with C FFI and HTTP server
- Add Swift Package with JudgeBridge dynamic library
- Add CoreMLJudgeBridge wrapper for CoreML model inference
- Add Calibration support (Platt scaling, temperature, thresholds)
- Add C FFI interface (judge_create, judge_destroy, judge_encode_once)
- Add SwiftNIO HTTP server with /score and /compare endpoints
- Add health check endpoint
- Update .gitignore for Swift build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,10 @@ config.local.yaml
 config.local.yml
 *.local.yaml
 *.local.yml
+
+# Swift Package Manager
+.swiftpm/
+.build/
+*.xcodeproj/
+*.xcworkspace/
+DerivedData/
