Refactor smoke test infrastructure and establish PyTorch→CoreML production path
- Add version gates (Python 3.10/3.11, coremltools >= 9.0)
- Split dependencies: requirements-core.txt and requirements-ort.txt
- Implement PyTorch backend for CoreML conversion (production path)
- Add ONNX backend with placeholder semantics (diagnostic only)
- Create PyTorch toy model generator (make_toy_torch.py)
- Add student export script with contract.json (export_student.py)
- Update converter CLI with --backend pytorch|onnx
- Implement SKIP semantics with .placeholder markers and results.json
- Split Makefile targets: smoke_torch (real conversion) vs smoke_toy (structure validation)
- Suppress ANE remote proxy warnings for cleaner output
- Update documentation: PyTorch→CoreML is production, ONNX is diagnostic only
- Fix NumPy compatibility (numpy<2.0.0 for PyTorch)

All smoke tests passing:
- smoke_torch: Real mlpackage from PyTorch ✅
- smoke_toy: ONNX placeholder with SKIP semantics ✅

--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,7 @@ config.local.yml
 *.xcodeproj/
 *.xcworkspace/
 DerivedData/
+
+# Placeholder markers (smoke test artifacts)
+.placeholder
+**/.placeholder
