--- a/configs/kd_recipe.yaml
+++ b/configs/kd_recipe.yaml
@@ -1,14 +1,18 @@
 teacher:
-  endpoint: "http://localhost:8000"
+  endpoint: "http://teacher.local"
   temperature: 1.5
   top_p: 0.95
+  max_tokens: 1024
 losses:
   ce_on_teacher: true
   kl_div: true
-  kl_weight: 0.5
   kd_temperature: 2.0
+  kl_weight: 0.5
 sampling:
   mix:
     general: 0.5
     domain_specific: 0.3
     tool_traces: 0.2
+caching:
+  enable_logit_cache: true
+  cache_dir: data/logits/
