--- a/configs/process_supervision.yaml
+++ b/configs/process_supervision.yaml
@@ -1,11 +1,12 @@
 schema:
-  name: "ToolCall"
-  required: ["name","arguments"]
+  name: ToolCall
+  required: [name, arguments]
   properties:
-    name: {type: "string"}
-    arguments: {type: "object"}
+    name: { type: string }
+    arguments: { type: object }
 training:
-  loss_json_validity_weight: 0.3
-  loss_tool_select_weight: 0.7
   constrained_decoding: true
   negative_examples: true
+  loss_json_validity_weight: 0.3
+  loss_tool_select_weight: 0.7
+  argument_validator: validators/tool_args.py
