--- a/configs/quant_qat_int8.yaml
+++ b/configs/quant_qat_int8.yaml
@@ -1,10 +1,15 @@
 qat:
+  enable: true
   weight_bits: 8
   act_bits: 8
-  observers: "minmax_per_channel"
+  observers: minmax_per_channel
   fake_quant_in_attention: true
   clamp_pre_softmax: true
-  rope_pre_rotate_qk: false
 schedule:
   warmup_steps: 2000
   total_steps: 30000
+stability:
+  rope_pre_rotate_qk: false   # set true only if numerics wobble
+  attn_entropy_floor: 0.2     # auxiliary loss to avoid collapse
+logging:
+  histogram_every: 1000
