Initialize CAWS framework for quality gates and provenance tracking
- Add CAWS working spec with Tier 2 configuration
- Configure git hooks for automatic provenance tracking
- Add CAWS IDE rules and hooks for Cursor
- Include agent workflow guide and codemod scripts
- Update .gitignore to exclude CAWS runtime folders

--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,16 @@ DerivedData/
 # Placeholder markers (smoke test artifacts)
 .placeholder
 **/.placeholder
+
+# CAWS Runtime Tracking
+.agent/
+
+# CAWS Tools Infrastructure
+apps/tools/caws/
+
+# IDE-specific configurations
+.windsurf/
+.github/copilot/
+
+# Documentation Archive
+docs/archive/
