chore: gitignore CAWS provenance chain.json
- Add .caws/provenance/chain.json to .gitignore
- Remove provenance chain from git tracking
- Provenance chain is auto-generated on each commit and causes merge conflicts
- File remains locally for provenance tracking and analysis

--- a/.gitignore
+++ b/.gitignore
@@ -192,6 +192,9 @@ DerivedData/
 # CAWS Tools Infrastructure
 apps/tools/caws/
 
+# CAWS Provenance Chain (auto-generated, causes merge conflicts)
+.caws/provenance/chain.json
+
 # IDE-specific configurations
 .windsurf/
 .github/copilot/
