--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,3 +55,9 @@ packages = [
 
 [tool.ruff]
 line-length = 100
+
+[project.optional-dependencies]
+dev = [
+    "hypothesis>=6.0",
+    "mutatest>=0.19.0",
+]
