--- a/pytest.ini
+++ b/pytest.ini
@@ -19,4 +19,5 @@ markers =
     integration: Integration tests
     slow: Slow running tests
     gpu: Tests requiring GPU
+    smoke: Smoke tests (quick signal on CI)
 
