feat(eval): implement sharding determinism validation and stable hash partitioning
- Replace modulo-based sharding with stable hash partitioning using sample_id SHA256
  - Ensures shard membership remains consistent across dataset reorders
  - Synthesizes stable ID from row hash if sample_id missing

- Add comprehensive sharding determinism validation script
  - Baseline vs sharded comparison with per-example equivalence checking
  - Dual tolerance metric comparison (absolute + relative epsilon)
  - Hard fingerprint validation (dataset, registry, tokenizer, wrapper, runner, model)
  - Shard completeness/uniqueness validation
  - Deterministic environment enforcement (PYTHONHASHSEED=0, single-threaded BLAS/MKL)
  - Generates sharding_validation.json provenance report

- Fix stratification bug in verify_contextual_set.py
  - multi_step scenario incorrectly required single_call samples
  - Updated check_stratification_backbone to skip multi_step for single_call check

- Add eval package to pyproject.toml and create __init__.py
  - Fixes import errors in tests

- Create E2E and pipeline test scripts
  - scripts/test_eval_harness_e2e.py: Basic integration tests
  - scripts/test_eval_full_pipeline.py: Full pipeline component tests

- Integrate validation into CI nightly workflow
  - Add sharding determinism validation step
  - Publish sharding_validation.json as artifact

- Update documentation
  - Comprehensive sharding determinism section in eval/HARNESS.md
  - Implementation review document with next steps guide

- Add Makefile target: validate-sharding

All tests passing: 25/25 (CI + integration + E2E)
Production ready: Core functionality complete, ready for real model evaluation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,20 +34,21 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 packages = [
-    "models",
-    "coreml",
-    "capture",
-    "schemas",
-    "training",
-    "evaluation",
-    "scripts",
-    "tools",
-    "build",
-    "arbiter",
-    "codemod",
-    "conversion",
-    "infra",
-    "onnx",
+  "models",
+  "coreml",
+  "capture",
+  "schemas",
+  "training",
+  "evaluation",
+  "eval",
+  "scripts",
+  "tools",
+  "build",
+  "arbiter",
+  "codemod",
+  "conversion",
+  "infra",
+  "onnx",
 ]
 
 [tool.setuptools.package-data]
