feat: Implement Milestone 2 - Latent Reasoning + Outer-Loop Refinement
Implements latent reasoning infrastructure for token reduction while maintaining
accuracy. Core components:

**Model Architecture:**
- Add halt_head to StudentLM for learned halting
- Implement forward_hidden() for latent mode processing
- Add <bot>/<eot> special tokens to tokenizer configs
- Create tokenizer constants for sentinel token IDs

**Runtime Engine:**
- LatentModeEngine: detects <bot>/<eot>, switches modes, processes hidden states
- Safety checks: max_latent_length, max_latent_spans, error fallback
- RefinementController: orchestrates outer-loop refinement with CAWS tier limits

**Training Infrastructure:**
- LatentCurriculum: progressive CoT→latent replacement with loss masking
- HaltHeadTargets: derives supervision from curriculum/Judge signals
- Tokenizer migration: resizes embeddings, initializes special tokens
- Config provenance: recipe as source of truth, env flags as CLI overrides

**Evaluation & Gates:**
- Baseline capture/loading for efficiency gate comparison
- Efficiency metrics: accuracy vs tokens/time curves
- Efficiency gates: ≥25-40% token reduction, accuracy maintenance, loop limits
- CI workflow: automated gate enforcement with baseline comparison

**Testing:**
- CAWS budget enforcement tests (tier limits, hard caps)
- Loss masking correctness tests (alignment, padding, accounting)
- E2E token reduction tests (long-chain task, accuracy assertion)
- Safety edge case tests (nested sentinels, unmatched tokens, excess spans)

**Documentation:**
- LATENT_REASONING.md: ADR, curriculum progression, halting logic, CAWS budgets

Reference: .cursor/plans/code-mode-latent-reasoning.md Milestone 2

--- a/models/student/tokenizer/tokenizer_config.json
+++ b/models/student/tokenizer/tokenizer_config.json
@@ -26,6 +26,22 @@
       "rstrip": false,
       "single_word": false,
       "special": true
+    },
+    "3": {
+      "content": "<bot>",
+      "lstrip": false,
+      "normalized": false,
+      "rstrip": false,
+      "single_word": false,
+      "special": true
+    },
+    "4": {
+      "content": "<eot>",
+      "lstrip": false,
+      "normalized": false,
+      "rstrip": false,
+      "single_word": false,
+      "special": true
     }
   },
   "bos_token": "<s>",
