fix: Update CI/CD workflows for new project structure
- Add PYTHONPATH environment variable to all workflows
- Fix broker-smoke test target to use correct test file
- Add broker_fixtures_hit_rate test to CAWS compliance gates
- Ensure package installation works with pyproject.toml

This resolves the CI failures where modules couldn't be imported due to missing PYTHONPATH configuration.

--- a/.github/workflows/broker-smoke.yml
+++ b/.github/workflows/broker-smoke.yml
@@ -24,6 +24,10 @@ jobs:
           pip install -e ".[dev]" || pip install -r requirements-core.txt
           pip install pytest
 
+      - name: Set PYTHONPATH
+        run: |
+          echo "PYTHONPATH=$PWD:$PYTHONPATH" >> $GITHUB_ENV
+
       - name: Run broker fixture hit-rate smoke
         run: |
           make ci-broker-smoke
