--- a/.github/workflows/eval-pr.yml
+++ b/.github/workflows/eval-pr.yml
@@ -17,7 +17,12 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -U pip
-          pip install -e ".[dev]"
+          pip install -e ".[dev]" || pip install -r requirements-core.txt
+          pip install pytest
+
+      - name: Set PYTHONPATH
+        run: |
+          echo "PYTHONPATH=$PWD:$PYTHONPATH" >> $GITHUB_ENV
 
       - name: Deterministic smoke
         run: |
