--- a/.github/workflows/eval-smoke.yml
+++ b/.github/workflows/eval-smoke.yml
@@ -23,6 +23,10 @@ jobs:
           pip install -e ".[dev]" || pip install -r requirements-core.txt
           pip install pytest
 
+      - name: Set PYTHONPATH
+        run: |
+          echo "PYTHONPATH=$PWD:$PYTHONPATH" >> $GITHUB_ENV
+
       - name: Generate tiny dataset
         run: |
           make contextual-gen TOTAL=60
