--- a/.github/workflows/broker-smoke.yml
+++ b/.github/workflows/broker-smoke.yml
@@ -30,5 +30,5 @@ jobs:
 
       - name: Run broker fixture hit-rate smoke
         run: |
-          make ci-broker-smoke
+          PYTHONPATH=$PWD:$PYTHONPATH python scripts/test_broker_smoke.py
 
