--- a/.github/workflows/eval-smoke.yml
+++ b/.github/workflows/eval-smoke.yml
@@ -49,42 +49,42 @@ jobs:
 
       - name: Enforce gates and fingerprints
         run: |
-          python - <<'PY'
+          python3 -c "
 import json
 import sys
 import os
 
-if not os.path.exists("eval/report.smoke.json"):
-    print("⚠️ Report not generated (likely missing model); skipping gate check")
+if not os.path.exists('eval/report.smoke.json'):
+    print('⚠️ Report not generated (likely missing model); skipping gate check')
     sys.exit(0)
 
-r = json.load(open("eval/report.smoke.json"))
+r = json.load(open('eval/report.smoke.json'))
 
 # Check fingerprints (P3)
-header = r.get("header", {})
+header = r.get('header', {})
 missing_fps = []
-if not header.get("dataset_sha256") or header.get("dataset_sha256") == "unknown":
-    missing_fps.append("dataset_sha256")
-if not header.get("tool_registry_sha256"):
-    missing_fps.append("tool_registry_sha256")
-if not header.get("tokenizer_fingerprint"):
-    missing_fps.append("tokenizer_fingerprint")
+if not header.get('dataset_sha256') or header.get('dataset_sha256') == 'unknown':
+    missing_fps.append('dataset_sha256')
+if not header.get('tool_registry_sha256'):
+    missing_fps.append('tool_registry_sha256')
+if not header.get('tokenizer_fingerprint'):
+    missing_fps.append('tokenizer_fingerprint')
 
 if missing_fps:
-    print(f"❌ Missing fingerprints: {missing_fps}")
+    print(f'❌ Missing fingerprints: {missing_fps}')
     sys.exit(1)
 
 # Check gates
-assert r.get("gates_ok", False), "Eval gates failed"
+assert r.get('gates_ok', False), 'Eval gates failed'
 
 # Extra cheap invariants
-s = r.get("summary", {})
-assert s.get("controls_with_integration", 0) == 0, f"Controls contaminated: {s.get('controls_with_integration')}"
-assert s.get("privacy_ok_rate", 1.0) == 1.0, f"Privacy violations: {s.get('privacy_ok_rate')}"
+s = r.get('summary', {})
+assert s.get('controls_with_integration', 0) == 0, f'Controls contaminated: {s.get(\"controls_with_integration\")}'
+assert s.get('privacy_ok_rate', 1.0) == 1.0, f'Privacy violations: {s.get(\"privacy_ok_rate\")}'
 
-print("✅ Gates OK:", s)
-print("✅ Fingerprints present:", list(header.keys()))
-PY
+print('✅ Gates OK:', s)
+print('✅ Fingerprints present:', list(header.keys()))
+"
 
       - name: Upload artifacts
         if: always()
