--- a/.github/workflows/eval-pr.yml
+++ b/.github/workflows/eval-pr.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           make contextual-gen TOTAL=60
           # Skip extraction if transformers not available (for CI smoke test)
-          PYTHONPATH=/usr/local/lib/python3.11/site-packages:$PYTHONPATH make contextual-extract IN=data/contextual_prompts.jsonl OUT=data/contextual_final.smoke.jsonl || echo "⚠️ Skipping extraction (transformers not available)"
+          PYTHONPATH=/usr/local/lib/python3.11/site-packages:$PYTHONPATH make contextual-extract IN=data/contextual_prompts.jsonl OUT=data/contextual_final.smoke.jsonl || echo "WARNING: Skipping extraction (transformers not available)"
 
       - name: Broker fixture hit-rate test
         run: |
@@ -36,36 +36,36 @@ jobs:
 
       - name: Fail if gates broken
         run: |
-          python3 -c "
-import json
-import sys
-import os
+          python3 << EOF
+          import json
+          import sys
+          import os
 
-# If report exists, check gates and fingerprints
-if os.path.exists('eval/report.smoke.json'):
-    r = json.load(open('eval/report.smoke.json'))
-    
-    # Check fingerprints (P3)
-    header = r.get('header', {})
-    missing_fps = []
-    if not header.get('dataset_sha256') or header.get('dataset_sha256') == 'unknown':
-        missing_fps.append('dataset_sha256')
-    if not header.get('tool_registry_sha256'):
-        missing_fps.append('tool_registry_sha256')
-    if not header.get('tokenizer_fingerprint'):
-        missing_fps.append('tokenizer_fingerprint')
-    
-    if missing_fps:
-        print(f'❌ Missing fingerprints: {missing_fps}')
-        sys.exit(1)
-    
-    # Check gates
-    if not r.get('gates_ok', False):
-        print('❌ Gates failed:', r.get('summary', {}))
-        sys.exit(1)
-    print('✅ Gates OK:', r.get('summary', {}))
-    print('✅ Fingerprints present:', list(header.keys()))
-else:
-    print('⚠️ Report not generated (model may be missing); broker smoke test passed')
-          "
+          # If report exists, check gates and fingerprints
+          if os.path.exists('eval/report.smoke.json'):
+              r = json.load(open('eval/report.smoke.json'))
+
+              # Check fingerprints (P3)
+              header = r.get('header', {})
+              missing_fps = []
+              if not header.get('dataset_sha256') or header.get('dataset_sha256') == 'unknown':
+                  missing_fps.append('dataset_sha256')
+              if not header.get('tool_registry_sha256'):
+                  missing_fps.append('tool_registry_sha256')
+              if not header.get('tokenizer_fingerprint'):
+                  missing_fps.append('tokenizer_fingerprint')
+
+              if missing_fps:
+                  print(f'❌ Missing fingerprints: {missing_fps}')
+                  sys.exit(1)
+
+              # Check gates
+              if not r.get('gates_ok', False):
+                  print('❌ Gates failed:', r.get('summary', {}))
+                  sys.exit(1)
+              print('✅ Gates OK:', r.get('summary', {}))
+              print('✅ Fingerprints present:', list(header.keys()))
+          else:
+              print('WARNING: Report not generated (model may be missing); broker smoke test passed')
+          EOF
 
